--- a/UtilMiaoLib/MAnnotationProcessor/settings.gradle
+++ b/UtilMiaoLib/MAnnotationProcessor/settings.gradle
@@ -1,1 +1,1 @@
-include ':app', ':MAnnoProcessor', ':MAnnotation', ':MPlugin'
+include ':app', ':MAnnoProcessor', ':MAnnotation', ':MPlugin', ':testmodule'
