--- a/UtilMiaoLib/MAnnotationProcessor/MAnnoProcessor/build.gradle
+++ b/UtilMiaoLib/MAnnotationProcessor/MAnnoProcessor/build.gradle
@@ -5,6 +5,7 @@ apply plugin: 'maven'
 
 dependencies {
     implementation files('libs/MAnnoLib.jar')
+    implementation project(':MAnnotation')
     implementation 'com.squareup:javapoet:1.9.0'
     implementation 'com.google.auto.service:auto-service:1.0-rc2'
 }
